--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+ffxhd-raw-rng-arrays.csv
 ffxhd-raw-rng10-values.csv
 ffxhd-raw-rng11-values.csv
 ffxhd-raw-rng12-values.csv
@@ -6,5 +7,3 @@ __pycache__/*
 binary/*
 ffx_rng_tracker.sublime-project
 ffx_rng_tracker.sublime-workspace
-
-
