structural pattern matching
changed get_input logic of ui widgets to structural pattern matching, fixes in get_encounter_prediction, fixes in return types of parse_* functions, fixes in default actions notes and encounters

--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -16,10 +16,10 @@ use theme: yes
 # format is #rrggbb
 # defaults are #000000 for text color and #ffffff for background on light mode
 #              #ffffff for text color and #333333 for background on dark mode
-# avaible options: ambush, preemptive, encounter, crit, stat update,
-#                  comment, advance rng, equipment, no encounters,
-#                  yojimbo low gil, yojimbo high gil, error, status miss,
-#                  important monster
+# available options: ambush, preemptive, encounter, crit, stat update,
+#                    comment, advance rng, equipment, no encounters,
+#                    yojimbo low gil, yojimbo high gil, error, status miss,
+#                    important monster
 ambush: #ff0000
 preemptive: #00ff00
 encounter: #0000ff
