ui widgets configs
added base configs for all ui widgets

--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -36,7 +36,40 @@ status miss background: #ff0000
 important monster: #000000
 important monster background: #ffff00
 
-[Encounters tracker]
+[Seed info]
+shown: yes
+windowed: no
+
+[Drops]
+shown: yes
+windowed: no
+
+[Encounters]
+shown: yes
 windowed: yes
 # separate monster names with commas, case insensitive
 monsters to highlight: bomb, basilisk, funguar, iron giant, ghost
+
+[Damage/crits/escapes/misses]
+shown: yes
+windowed: no
+
+[Monster Targeting]
+shown: yes
+windowed: no
+
+[Status]
+shown: yes
+windowed: no
+
+[Yojimbo]
+shown: yes
+windowed: no
+
+[Monster Data]
+shown: yes
+windowed: no
+
+[Configs]
+shown: yes
+windowed: no
