--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ dist/*
 build/*
 .vscode/*
 ffx_rng_tracker_seeds/*
+ffx_rng_tracker_notes/*
 ffx_rng_tracker_errors.log
 ffx_rng_tracker_configs.ini
