encounters table and encounters planner

--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -8,7 +8,6 @@ ps2 seeds minutes: 2
 [UI]
 use dark mode: no
 fontsize: 9
-use unicode: yes
 use theme: yes
 
 [Colors]
@@ -49,6 +48,14 @@ shown: yes
 windowed: yes
 # separate monster names with commas, case insensitive
 monsters to highlight: bomb, basilisk, funguar, iron giant, ghost
+
+[Encounters Table]
+shown: no
+windowed: yes
+
+[Encounters Planner]
+shown: no
+windowed: yes
 
 [Damage/crits/escapes/misses]
 shown: yes
