fixed encounters trackers

--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -34,6 +34,7 @@ error background: #ff0000
 status miss background: #ff0000
 important monster: #000000
 important monster background: #ffff00
+captured monster: #0000bb
 
 [Seed info]
 shown: yes
