--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -34,7 +34,7 @@ error background: #ff0000
 status miss background: #ff0000
 important monster: #000000
 important monster background: #ffff00
-captured monster: #0000bb
+captured monster: #cccccc
 
 [Seed info]
 shown: yes
@@ -58,11 +58,7 @@ windowed: yes
 shown: no
 windowed: yes
 
-[Damage/crits/escapes/misses]
-shown: yes
-windowed: no
-
-[Monster Targeting]
+[Actions]
 shown: yes
 windowed: no
 
