game version and speedrun category
added game version and speedrun category enums, added notes folders for each supported category, added game version and speedrun category configs

--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -1,7 +1,10 @@
 [General]
 # add a seed option to open the tracker with that seed directly
 # seed: 0
-ps2: no
+# supported game versions: PS2 NA, HD
+game version: HD
+# supported categories: AnyPercent, Boosters, No Sphere Grid, Nemesis
+category: AnyPercent
 # the tracker will search all the possible seeds produced in the first x minutes since bootup
 ps2 seeds minutes: 2
 
