--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -51,7 +51,7 @@ windowed: no
 shown: yes
 windowed: yes
 # separate monster names with commas, case insensitive
-monsters to highlight: bomb, basilisk, funguar, iron giant, ghost
+monsters to highlight: bomb, basilisk, funguar, iron giant, ghost, qactuar
 
 [Encounters Table]
 shown: no
