statusapplication and buffs, formations fixes, stepstracker, inventory, seeds file
added a process_end/start_of_turn methods to gamestate
added a statusapplication class with an application chance and number of stacks properties to allow statuses to expire
added buffs to differentiate them from stats, allowing them to get reset at the end of battle, implemented the remaining buffs
moved the forced condition property from zones to single formations to allow some specific encounters to be have a forced condition
removed characters that are not alphanumeric or underscores from encounter and zone names
changed the syntax of encounter notes
added a monster spawn event to provide a way to spawn additional monsters in the current encounter
added a stepstracker widget and added a parse_encounter_checks parsing function for the encounterchecks event
removed the encounters predictions section in the seedinfo widget
added gil, inventory and equipment_inventory properties to gamestate
the kill and steal events add the spoils to the gamestate properties
added an inventoryslot class and a function used to create a text table from a list of inventoryslots
added an inventory command parsing function
added a parse_character_status function to show character status information
optimized the ffxrngtracker class and the datetime_to_seed function, made the make_seeds_file function around 80% faster and the seeds file produced around 60% smaller
fixed the healing damagetype formula

--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -6,7 +6,7 @@ game version: HD
 # supported categories: AnyPercent, Boosters, No Sphere Grid, Nemesis
 category: AnyPercent
 # the tracker will search all the possible seeds produced in the first x minutes since bootup
-ps2 seeds minutes: 2
+ps2 seeds minutes: 5
 
 [UI]
 use dark mode: no
@@ -24,12 +24,12 @@ use theme: yes
 #                    important monster
 ambush: #ff0000
 preemptive: #00ff00
-encounter: #0000ff
+encounter: #8888ff
 crit: #00ff00
 stat update: #beb144
 comment: #bbbbbb
 advance rng: #ff0000
-equipment: #0000ff
+equipment: #8888ff
 no encounters: #00ff00
 yojimbo low gil: #00ff00
 yojimbo high gil: #ff0000
@@ -52,6 +52,10 @@ shown: yes
 windowed: yes
 # separate monster names with commas, case insensitive
 monsters to highlight: bomb, basilisk, funguar, iron giant, ghost, qactuar
+
+[Steps]
+shown: yes
+windowed: yes
 
 [Encounters Table]
 shown: no
