notes and events cleanup
cleaned up parsing functions and events, removed the rollback methods
cleaned up notes
cleaned up the monster class and the get_monster_data function
added an ps2int gameversion that allows to find a ps2-exclusive seed while keeping the hd version patches
cleaned up the status chance table function
the treeview function now iterates through sets and dataclasses properly
added more functionality to the logger

--- a/data/default_configs.ini
+++ b/data/default_configs.ini
@@ -1,7 +1,7 @@
 [General]
 # add a seed option to open the tracker with that seed directly
 # seed: 0
-# supported game versions: PS2 NA, HD
+# supported game versions: PS2 NA, PS2 INT, HD
 game version: HD
 # supported categories: AnyPercent, Boosters, No Sphere Grid, Nemesis
 category: AnyPercent
@@ -55,7 +55,7 @@ monsters to highlight: bomb, basilisk, funguar, iron giant, ghost, qactuar
 
 [Steps]
 shown: yes
-windowed: yes
+windowed: no
 
 [Encounters Table]
 shown: no
@@ -85,6 +85,6 @@ windowed: no
 shown: no
 windowed: no
 
-[Configs]
-shown: no
+[Configs/Log]
+shown: yes
 windowed: no
