--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ build/*
 temp*
 ffx_rng_tracker_seeds/*
 ffx_rng_tracker_notes/*
-ffx_rng_tracker_errors.log
+ffx_rng_tracker_log.log
 ffx_rng_tracker_configs.ini
