--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build/*
 .vscode/*
 .venv/*
 temp*
+ffx_rng_tracker.egg-info/*
 ffx_rng_tracker_seeds/*
 ffx_rng_tracker_notes/*
 ffx_rng_tracker_log.log
