--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -3,7 +3,7 @@
 # seed: 0
 # supported game versions: PS2 NA, PS2 INT, HD
 game version: HD
-# supported categories: AnyPercent, Boosters, No Sphere Grid, Nemesis
+# default categories: AnyPercent, Boosters, No Sphere Grid, Nemesis
 category: AnyPercent
 # the tracker will search all the possible seeds produced in the first x minutes since bootup
 ps2 seeds minutes: 5
@@ -51,7 +51,7 @@ windowed: no
 shown: yes
 windowed: yes
 # separate monster names with commas, case insensitive
-monsters to highlight: bomb, basilisk, funguar, iron giant, ghost, qactuar
+monsters to highlight: bomb, basilisk, iron giant, ghost, qactuar
 
 [Steps]
 shown: yes
