seeds file making and reading
updated the format of the seeds file to lower its size and updated the seed making and reading functions to make use of the new format
removed the ps2 seeds minutes option from the configs
added the continue ps2 seed search to the configs
removed the get_frames_from_boot function and replaced it with a frames_from_boot dict

--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -5,8 +5,9 @@
 game version: HD
 # default categories: AnyPercent, Boosters, No Sphere Grid, Nemesis
 category: AnyPercent
-# the tracker will search all the possible seeds produced in the first x minutes since bootup
-ps2 seeds minutes: 3
+# if the tracker can't find a seed in the precomputed file
+# it will keep searching with a slower method
+continue ps2 seed search: no
 
 [UI]
 use dark mode: no
