--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -16,28 +16,31 @@ use theme: yes
 
 [Colors]
 # these colors will be used to highlight specific text
-# format is #rrggbb
-# defaults are #000000 for text color and #ffffff for background on light mode
-#              #ffffff for text color and #333333 for background on dark mode
-# available options: ambush, preemptive, encounter, crit, stat update,
-#                    comment, advance rng, equipment, no encounters,
-#                    yojimbo low gil, yojimbo high gil, error, status miss,
-#                    important monster
-ambush: #ff0000
-preemptive: #00ff00
-encounter: #8888ff
-crit: #00ff00
-stat update: #beb144
+# colors will be applied in the specified order, the ones at the end will
+# overwrite the ones at the top if multiple colors are applied
+# format is "#rrggbb", 1st color is foreground, 2nd is background
+# available options: preemptive, ambush, encounter, crit, party update,
+#                    stat update, equipment update, comment, advance rng,
+#                    equipment, no encounters, yojimbo low gil,
+#                    yojimbo high gil, compatibility update, error,
+#                    status miss, important monster, captured monster
 comment: #bbbbbb
+error: #000000,#ff0000
+encounter: #4488ff
+party update: #beb144
+stat update: #beb144
+equipment update: #beb144
+compatibility update: #beb144
 advance rng: #ff0000
 equipment: #8888ff
+preemptive: #00ff00
+ambush: #ff0000
+crit: #00ff00
+status miss: -, #ff0000
 no encounters: #00ff00
 yojimbo low gil: #00ff00
 yojimbo high gil: #ff0000
-error background: #ff0000
-status miss background: #ff0000
-important monster: #000000
-important monster background: #ffff00
+important monster: #000000, #ffff00
 captured monster: #cccccc
 
 [Seed info]
