ui tags, tk commands, search bar
ui colors and regex patterns are now stored in the configs file
added a tags option to the widgets sections
trackerui no longer calls callback inside its init method
scrollabletext is now a frame with the text as a child, removed _override_geometry_managers
highlight_pattern method of scrollabletext now uses python regex instead of tk search
removed highlight_patterns, get_regex_patterns and setup_tags from, added register_tag in tkoutputwidget
removed classes that inherited from tkoutputwidget whose only method was regex_patterns
added create_command_proxy as an alternative to tk widgets binding and command
changed the check in the callback method of trackerui to only bypass the parsing
added a searchbar to uitracker and monster_data_viewer
updated readme

--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -10,85 +10,97 @@ category: AnyPercent
 continue ps2 seed search: no
 
 [UI]
-use dark mode: no
 fontsize: 9
 use theme: yes
+use dark mode: no
 
-[Colors]
-# these colors will be used to highlight specific text
-# colors will be applied in the specified order, the ones at the end will
-# overwrite the ones at the top if multiple colors are applied
-# format is "#rrggbb", 1st color is foreground, 2nd is background
-# available options: preemptive, ambush, encounter, crit, party update,
-#                    stat update, equipment update, comment, advance rng,
-#                    equipment, no encounters, yojimbo low gil,
-#                    yojimbo high gil, compatibility update, error,
-#                    status miss, important monster, captured monster
-comment: #bbbbbb
-error: #000000,#ff0000
-encounter: #4488ff
-party update: #beb144
-stat update: #beb144
-equipment update: #beb144
-compatibility update: #beb144
-advance rng: #ff0000
-equipment: #8888ff
-preemptive: #00ff00
-ambush: #ff0000
-crit: #00ff00
-status miss: -, #ff0000
-no encounters: #00ff00
-yojimbo low gil: #00ff00
-yojimbo high gil: #ff0000
-important monster: #000000, #ffff00
-captured monster: #cccccc
+[Tags]
+# these tags will be used to highlight specific text
+# add their names to the "tags" option in the widgets sections to make them use it
+# tags will be applied in the specified order, the ones at the end will
+# overwrite the ones at the top if multiple tags are applied
+# 1st argument is the regex, 2nd argument is foreground color (optional), 3rd is background color (optional)
+# regex has to be inside single quotes, color format is "#rrggbb"
+# if the regex is invalid the option will be ignored
+comment:              '^#.*$'                                       , #bbbbbb, -
+comment 2:            '^(#|=).*$'                                   , #4488ff, -
+command:              '^Command: .*$'                               , #00ff00, -
+error:                '^Error: .*$'                                 , -      , #ff0000
+encounter:            '^Encounter: .*$'                             , #4488ff, -
+stats:                '^Stats: .*$'                                 , #beb144, -
+party update:         '^Party: .*$'                                 , #beb144, -
+stat update:          '^Stat: .*$'                                  , #beb144, -
+equipment update:     '^Equipment: .*$'                             , #beb144, -
+compatibility update: '^Compatibility: .*$'                         , #beb144, -
+advance rng:          '^Advanced rng.*$'                            , #ff0000, -
+equipment:            '\bEquipment\b'                               , #8888ff, -
+armor:                '\bArmor(?= |)\b'                             , #8888ff, -
+preemptive:           '\bPreemptive\b'                              , #00ff00, -
+ambush:               '\bAmbush\b'                                  , #ff0000, -
+crit:                 '(?<=\()\bCrit\b'                             , #00ff00, -
+status miss:          '\[[^\]]* Fail\]'                             , -      , #ff0000
+status miss 2:        '\b100\b'                                     , -      , #ff0000
+no encounters:        '\bNo Encounters\b'                           , #00ff00, -
+yojimbo low gil:      '\b[0-9]{1,7}(?= gil )'                       , #00ff00, -
+yojimbo high gil:     '\b[0-9]{10,}(?= gil )'                       , #ff0000, -
+important monster:    '\b(Bomb|Basilisk|Iron Giant|Ghost|Qactuar)\b', #000000, #ffff00
 
 [Seed info]
 shown: yes
 windowed: no
+tags: armor
 
 [Drops]
 shown: yes
 windowed: no
+tags: comment, error, command, party update, advance rng, equipment, no encounters
 
 [Encounters]
 shown: yes
 windowed: yes
-# separate monster names with commas, case insensitive
-monsters to highlight: bomb, basilisk, iron giant, ghost, qactuar
+tags: comment 2, error, preemptive, ambush, important monster
 
 [Steps]
 shown: yes
 windowed: no
-
-[Encounters Table]
-shown: no
-windowed: yes
+tags: error
 
 [Encounters Planner]
 shown: no
 windowed: yes
+tags: comment 2, error, preemptive, ambush
+
+[Encounters Table]
+shown: no
+windowed: yes
+tags: preemptive, ambush
 
 [Actions]
 shown: yes
 windowed: no
+tags: comment, error, command, encounter, stats, party update, stat update, equipment update, advance rng, preemptive, ambush, crit, status miss
 
 [Status]
 shown: yes
 windowed: no
+tags: status miss 2
 
 [Yojimbo]
 shown: yes
 windowed: no
+tags: comment, error, command, compatibility update, advance rng, yojimbo low gil, yojimbo high gil
 
 [Monster Data]
 shown: yes
 windowed: no
+tags: 
 
 [Seedfinder]
 shown: no
 windowed: no
+tags: comment, error, command, encounter, stats, party update, stat update, equipment update, advance rng, preemptive, ambush, crit, status miss
 
 [Configs/Log]
 shown: yes
 windowed: no
+tags: 
