actor and nulstatus fixes, new format_monster_data
cleaned up characteractor and monsteractor __init__ and reset methods, added set_buff method
moved nulstatuses check outside of the get_damage function
nulstatuses are now properly tracked by the actionresult when blocking damage
improved format_monster_data, added tags relevant for the monsterdata ui widget

--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -44,6 +44,8 @@ no encounters:        '\bNo Encounters\b'                           , #00ff00, -
 yojimbo low gil:      '\b[0-9]{1,7}(?= gil )'                       , #00ff00, -
 yojimbo high gil:     '\b[0-9]{10,}(?= gil )'                       , #ff0000, -
 important monster:    '\b(Bomb|Basilisk|Iron Giant|Ghost|Qactuar)\b', #000000, #ffff00
+table row:            '\+((-|=)+\+)+'                               , #bbbbbb, -
+table column:         '\|'                                          , #bbbbbb, -
 
 [Seed info]
 shown: yes
@@ -93,7 +95,7 @@ tags: comment, error, command, compatibility update, advance rng, yojimbo low gi
 [Monster Data]
 shown: yes
 windowed: no
-tags: 
+tags: table row, table column
 
 [Seedfinder]
 shown: no
