changing seed, macros
added uiwidget enum
added a change_seed method to trackerui
removed tkstatustracker and moved its functionality into tkseedinfo
removed damagevaluesdialogue and moved its functionality into tkseedinfo
tkseedinfo now allows for a new seed to be loaded from the ui
usage text now shows commands
added macros functionality to eventparser
added macros to default action notes
removed the shown and windowed options from the seed info configs section
removed the status configs section

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ ffx_rng_tracker_seeds/*
 ffx_rng_tracker_notes/*
 ffx_rng_tracker_log.log
 ffx_rng_tracker_configs.ini
+ffx_rng_tracker_macros.toml
