--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -48,9 +48,7 @@ table row:            '\+((-|=)+\+)+'                               , #bbbbbb, -
 table column:         '\|'                                          , #bbbbbb, -
 
 [Seed info]
-shown: yes
-windowed: no
-tags: armor
+tags: armor, status miss 2
 
 [Drops]
 shown: yes
@@ -81,11 +79,6 @@ tags: preemptive, ambush
 shown: yes
 windowed: no
 tags: comment, error, command, encounter, stats, party update, stat update, equipment update, advance rng, preemptive, ambush, crit, status miss
-
-[Status]
-shown: yes
-windowed: no
-tags: status miss 2
 
 [Yojimbo]
 shown: yes
