--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -10,9 +10,9 @@ category: AnyPercent
 continue ps2 seed search: no
 
 [UI]
+# available themes are: alt, azure-dark, azure-light, clam, classic, default, vista, winnative, xpnative
+default theme: azure-light
 fontsize: 9
-use theme: yes
-use dark mode: no
 
 [Tags]
 # these tags will be used to highlight specific text
@@ -48,6 +48,8 @@ table row:            '\+((-|=)+\+)+'                               , #bbbbbb, -
 table column:         '\|'                                          , #bbbbbb, -
 
 [Seed info]
+# this widget will always be shown as the 1st tab in the main window
+# it has no "shown" or "windowed" options
 tags: armor, status miss 2
 
 [Drops]
