tkinter utils and hotkeys
added tkinter_utils, moved create_command_proxy and get_default_font into it
added bind_all_children, using it for save_notes bind in tktrackers
added cycle_theme, bound to the f8 key in main
save_notes now guarantees notes have only 1 empty line at the end

--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -11,6 +11,7 @@ continue ps2 seed search: no
 
 [UI]
 # available themes are: alt, azure-dark, azure-light, clam, classic, default, vista, winnative, xpnative
+# theme can be changed by pressing the F8 key while on the main window
 default theme: azure-light
 fontsize: 9
 
