ps2 jp version, killer bonus equipment chance
added ps2_jp game version
killer bonus equipment chance is now different based on game version

--- a/ffx_rng_tracker/data/data_files/default_configs.ini
+++ b/ffx_rng_tracker/data/data_files/default_configs.ini
@@ -1,7 +1,7 @@
 [General]
 # add a seed option to open the tracker with that seed directly
 # seed: 0
-# supported game versions: PS2 NA, PS2 INT, HD
+# supported game versions: PS2 JP, PS2 NA, PS2 INT, HD
 game version: HD
 # default categories: AnyPercent, Boosters, No Sphere Grid, Nemesis
 category: AnyPercent
